# bzip2

./: CMakeLists.txt  Makefile  bzip2-shared  bzip2.pc.cmakein
